# toy_compiler

./: .gitignore  CMakeLists.txt  README.md  add_two_vectors.cpp  add_two_vectors.toy  build.sh  clean.sh  compile.sh  main.cpp  test.cpp  test.sh
.github/workflows/: cmake-single-platform.yml
backend/: CMakeLists.txt  backend.cc  backend.h  cuda_utils.cc  cuda_utils.h  passes.cc  passes.h  passes.td  tile_loops_pass.cc  utils.cc  utils.h
common/: common.h  status.h
docs/: compiler.drawio
frontend/: AST.cc  AST.h  CMakeLists.txt  Lexer.h  Parser.h  frontend.cc  frontend.h  toy_dialect.cc  toy_dialect.h  toy_ops.td
middleend/: CMakeLists.txt  middleend.cc  middleend.h  passes.cc  passes.h  passes.td
runtime/: CMakeLists.txt  CudaRuntimeWrappers.cpp  cuda_utils.cc  cuda_utils.h  runtime.cc  runtime.h
